--- a/css/styles.css
+++ b/css/styles.css
@@ -80,9 +80,8 @@ section {
     justify-content: left;
     align-items: center;
     gap: 20px;
-    margin-top: 20px;
-
-
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .contact-item {
