--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 body, h1, p {
     margin: 0;
     padding: 0;
-    font-family: "Comic Sans MS", "Comic Sans", cursive;
+    font-family: "Comic Sans MS","Comic Neue", "Comic Sans", cursive;
 }
 
 header {
