--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@ body, h1, p {
     padding: 0;
     font-family: "Comic Sans MS","Comic Neue", "Comic Sans", cursive;
     font-size: 18px;
+    text-align: justify;
 }
 
 header {
