--- a/css/styles.css
+++ b/css/styles.css
@@ -6,21 +6,18 @@ body, h1, p {
     font-size: 18px;
     text-align: justify;
 }
-
 header {
     background-color: #000000;
     color: #f0f0f0;
     text-align: center;
     justify-items: center;
-   
 }
-
 nav ul {
     list-style: none;
     display: flex;
     align-items: center;
     padding: 0px;
-    justify-content: space-evenly
+    justify-content: space-evenly;
 }
 
 nav ul li {
@@ -31,8 +28,11 @@ nav ul li a {
     text-decoration: none;
     color: #f0f0f0;
     font-weight: bold;
+    transition: font-size 2s ease;
 }
-
+nav a:hover{
+    font-size: 22px;
+}
 section {
     padding: 50px;
     text-align: left;
