--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,6 @@ nav ul {
     padding: 0px;
     justify-content: space-evenly;
 }
-
 nav ul li {
     align-items: center;
 }
@@ -28,6 +27,7 @@ nav ul li a {
     text-decoration: none;
     color: #f0f0f0;
     font-weight: bold;
+    line-height: 20px;
     transition: font-size 2s ease;
 }
 nav a:hover{
